Name:                grassmudhorse
Version:             0.4
Synopsis:            GrassMudHorse, an esoteric programming language based on Whitespace.
Description:         GrassMudHorse, an esoteric programming language based on Whitespace.
License:             GPL
License-file:        COPYING
Author:              
Maintainer:          mort.yao@gmail.com
Homepage:            https://github.com/soimort/GrassMudHorse
Category:            Compilers/Interpreters
Build-Type:          Simple
Cabal-Version:       >=1.2
Data-Files:          README.md examples/calc.ws examples/count.ws examples/fact.ws examples/hanoi.ws examples/hworld.ws examples/loctest.ws examples/name.ws examples/randperm.ws docs/tutorial.html emacs/whitespace-mode.el
Extra-Source-Files:  VM.hs Tokens.hs Input.hs

Executable gmh
  Main-is:           main.hs
  Build-Depends:     haskell98, random
