Name:                grassmudhorse
Version:             0.5
Synopsis:            GrassMudHorse, an esoteric programming language based on Whitespace.
Description:         GrassMudHorse, an esoteric programming language based on Whitespace.
License:             GPL
License-file:        COPYING
Author:              
Maintainer:          mort.yao@gmail.com
Homepage:            https://github.com/soimort/GrassMudHorse
Category:            Compilers/Interpreters
Build-Type:          Simple
Cabal-Version:       >=1.2
Data-Files:          README.md examples/99-grass-mud-horses.gmh examples/calc.gmh examples/count.gmh examples/fact.gmh examples/fibonacci.gmh examples/hanoi.gmh examples/hworld.gmh examples/loctest.gmh examples/name.gmh examples/randperm.gmh
Extra-Source-Files:  VM.hs Tokens.hs Input.hs

Executable gmh
  Main-is:           main.hs
  Build-Depends:     base, array, random

Executable ws2gmh
  Main-is:           ws2gmh.hs
  Build-Depends:     base, text

Executable gmh2ws
  Main-is:           gmh2ws.hs
  Build-Depends:     base, text
